--- a/port1.html
+++ b/port1.html
@@ -100,21 +100,21 @@
         <div class="card-icon">🌐</div>
         <div class="card-title">Web Development</div>
         <div class="card-content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>I creates custom websites that combine functionality with aesthetic appeal. From corporate websites to personal portfolios, each project is tailored to reflect the client’s unique brand identity, ensuring an engaging online presence. </p>
         </div>
       </div>
       <div class="card animate" id="app-dev" style="--i:1;">
         <div class="card-icon">📱</div>
         <div class="card-title">App Development</div>
         <div class="card-content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p>I develops user-friendly mobile and web applications that streamline workflows, enhance user experience, and improve productivity. He focuses on intuitive designs and efficient performance, ensuring that each application aligns with client needs and stands out in today’s digital landscape.</p>
         </div>
       </div>
       <div class="card animate" id="networking" style="--i:2;">
         <div class="card-icon">🔌</div>
         <div class="card-title">Networking</div>
         <div class="card-content">
-          <p>Networking solutions to ensure secure and reliable connectivity for your organization. Solutions include router setup, CCTV installation, and infrastructure management.</p>
+          <p>I is also skilled in setting up networking infrastructure, from routers and network systems to surveillance and security systems like CCTV installations. This comprehensive service is ideal for clients looking to establish secure and reliable networks, whether for small businesses or larger enterprises.</p>
         </div>
       </div>
     </div>
